WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174885
[macOS] Reeder's defaults font is Times instead of San Francisco
https://bugs.webkit.org/show_bug.cgi?id=174885
Summary
[macOS] Reeder's defaults font is Times instead of San Francisco
Myles C. Maxfield
Reported
2017-07-26 23:29:05 PDT
[macOS] Reeder's defaults font is Times instead of San Francisco
Attachments
Patch
(8.70 KB, patch)
2017-07-26 23:32 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(10.50 KB, patch)
2017-07-28 11:03 PDT
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-07-26 23:32:15 PDT
Created
attachment 316529
[details]
Patch
Myles C. Maxfield
Comment 2
2017-07-26 23:32:58 PDT
<
rdar://problem/33462483
>
Myles C. Maxfield
Comment 3
2017-07-28 11:03:17 PDT
Created
attachment 316648
[details]
Patch
Simon Fraser (smfr)
Comment 4
2017-07-28 11:06:47 PDT
Comment on
attachment 316648
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=316648&action=review
> Source/WebCore/platform/graphics/FontDescription.cpp:163 > + if (family1.startsWith('.')) > + return StringHash::equal(family1.string(), family2.string()); > + return ASCIICaseInsensitiveHash::equal(family1, family2);
Please add a comment here with a radar number that references the underlying reason why dot names have to be case sensitive.
> Source/WebCore/platform/graphics/FontDescription.cpp:170 > + if (family.startsWith('.')) > + return StringHash::hash(family.string()); > + return ASCIICaseInsensitiveHash::hash(family);
And here.
> Source/WebCore/platform/graphics/FontDescription.cpp:177 > + if (family.startsWith('.')) > + return family.string(); > + return family.string().foldCase();
And here.
Myles C. Maxfield
Comment 5
2017-07-28 11:36:43 PDT
Committed
r220009
: <
http://trac.webkit.org/changeset/220009
>
Michael Catanzaro
Comment 6
2017-08-15 10:05:06 PDT
Looks like this test is supposed to be specific to macOS and iOS, right? I'm going to skip it in the global expectations file and mark it as passing for macOS and iOS.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug